--- a/src/client/view/manager/AddEditWardView.fxml
+++ b/src/client/view/manager/AddEditWardView.fxml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.AddEditWardViewController">
-    <Button layoutX="151.0" layoutY="361.0" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
-    <Button layoutX="82.0" layoutY="368.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
-    <Button layoutX="22.0" layoutY="361.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
-    <TextField fx:id="wardNameTextField" layoutX="43.0" layoutY="25.0" promptText="Ward Name" />
-    <TextField fx:id="wardRoomNumber" layoutX="43.0" layoutY="62.0" promptText="Room number" />
-   <Label layoutX="332.0" layoutY="16.0" text="Doctors working in the ward" />
-   <TableView fx:id="doctorsAssignedToWardTable" layoutX="232.0" layoutY="38.0" prefHeight="446.0" prefWidth="457.0">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.AddEditWardViewController">
+    <Button layoutX="26.0" layoutY="217.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="25.0" prefWidth="60.0" text="Save" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="218.0" />
+    <Button layoutX="26.0" layoutY="210.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="25.0" prefWidth="60.0" text="Clear" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="180.0" />
+    <Button layoutX="35.0" layoutY="459.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="25.0" prefWidth="60.0" text="Back" AnchorPane.bottomAnchor="14.7" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="459.0" />
+    <TextField fx:id="wardNameTextField" layoutX="27.0" layoutY="24.0" prefHeight="26.0" prefWidth="166.0" promptText="Ward Name" style="-fx-background-color: #f8f8ff;" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="24.0" />
+    <TextField fx:id="wardRoomNumber" layoutX="16.0" layoutY="62.0" prefHeight="26.0" prefWidth="166.0" promptText="Room number" style="-fx-background-color: #f8f8ff;" AnchorPane.leftAnchor="26.0" />
+   <TableView fx:id="doctorsAssignedToWardTable" layoutX="199.0" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #f8f8ff;">
      <columns>
-       <TableColumn fx:id="doctorsAssignedToWardFirstName" prefWidth="143.0" text="First name" />
-       <TableColumn fx:id="doctorsAssignedToWardLastName" minWidth="7.0" prefWidth="136.0" text="Last name" />
-         <TableColumn fx:id="doctorsAssignedToWardLSSN" prefWidth="177.0" text="SSN" />
+       <TableColumn fx:id="doctorsAssignedToWardFirstName" prefWidth="150.0" text="First name" />
+       <TableColumn fx:id="doctorsAssignedToWardLiastName" minWidth="7.0" prefWidth="150.0" text="Last name" />
+         <TableColumn fx:id="doctorsAssignedToWardLSSN" prefWidth="213.0" text="SSN" />
      </columns>
+      <effect>
+         <DropShadow color="#635050" />
+      </effect>
    </TableView>
+   <effect>
+      <DropShadow color="#635050" />
+   </effect>
 </AnchorPane>
