--- a/src/client/view/manager/EmployeeView.fxml
+++ b/src/client/view/manager/EmployeeView.fxml
@@ -4,22 +4,26 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.EmployeeViewController">
+<AnchorPane maxWidth="500.0" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.EmployeeViewController">
    <children>
-      <ComboBox fx:id="employeeTypeComboBox" layoutX="23.0" layoutY="24.0" prefHeight="25.0" prefWidth="105.0" promptText="Select type" />
-      <Button layoutX="23.0" layoutY="99.0" mnemonicParsing="false" onAction="#onAddEmployeeButton" prefHeight="25.0" prefWidth="59.0" text="Add" />
-      <Button layoutX="23.0" layoutY="144.0" mnemonicParsing="false" onAction="#onEditEmployeeButton" prefHeight="25.0" prefWidth="59.0" text="Edit" />
-      <Button layoutX="23.0" layoutY="188.0" mnemonicParsing="false" onAction="#onRemoveEmployeeButton" text="Remove" />
-      <TableView fx:id="employeeTable" layoutX="200.0" layoutY="24.0" prefHeight="357.0" prefWidth="378.0">
+      <ComboBox fx:id="employeeTypeComboBox" layoutX="15.0" layoutY="24.0" prefHeight="26.0" prefWidth="126.0" promptText="Select type" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="24.0" />
+      <Button layoutX="26.0" layoutY="178.00000000000003" mnemonicParsing="false" onAction="#onAddEmployeeButton" prefHeight="25.0" prefWidth="60.0" text="Add" AnchorPane.bottomAnchor="296.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="612.0" AnchorPane.topAnchor="180.0" />
+      <Button layoutX="26.0" layoutY="219.0" mnemonicParsing="false" onAction="#onEditEmployeeButton" prefHeight="25.0" prefWidth="60.0" text="Edit" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="219.0" />
+      <Button layoutX="26.0" layoutY="256.0" mnemonicParsing="false" onAction="#onRemoveEmployeeButton" prefHeight="25.0" prefWidth="60.0" text="Remove" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="257.0" />
+      <TableView fx:id="employeeTable" layoutX="197.0" prefHeight="500.0" prefWidth="499.0" style="-fx-background-color: #f8f8ff;">
         <columns>
-          <TableColumn fx:id="ssnColumn" prefWidth="101.0" text="SSN" />
-          <TableColumn fx:id="fNameColumn" prefWidth="129.0" text="First name" />
-            <TableColumn fx:id="lNameColumn" prefWidth="147.0" text="Last name" />
+          <TableColumn fx:id="fNameColumn" prefWidth="150.0" text="First name" />
+            <TableColumn fx:id="lNameColumn" prefWidth="150.0" text="Last name" />
+          <TableColumn fx:id="ssnColumn" prefWidth="213.0" text="SSN" />
         </columns>
+         <effect>
+            <DropShadow color="#635050" />
+         </effect>
       </TableView>
-      <Button layoutX="136.0" layoutY="24.0" mnemonicParsing="false" onAction="#onGetButton" text="Get" />
-      <Button layoutX="23.0" layoutY="356.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
+      <Button layoutX="158.0" layoutY="24.0" mnemonicParsing="false" onAction="#onGetButton" text="Get" />
+      <Button layoutX="26.0" layoutY="461.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="25.0" prefWidth="60.0" text="Back" AnchorPane.bottomAnchor="14.799999999999976" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="461.0" />
    </children>
 </AnchorPane>
