--- a/src/client/view/manager/WardView.fxml
+++ b/src/client/view/manager/WardView.fxml
@@ -3,19 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.WardViewController">
+<AnchorPane maxHeight="500.0" prefHeight="499.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.manager.WardViewController">
     <children>
-        <Button layoutX="32.0" layoutY="200.0" mnemonicParsing="false" onAction="#onAddWardButton" prefHeight="25.0" prefWidth="59.0" text="Add" />
-        <Button layoutX="32.0" layoutY="245.0" mnemonicParsing="false" onAction="#onEditWardButton" prefHeight="25.0" prefWidth="59.0" text="Edit" />
-        <Button layoutX="32.0" layoutY="289.0" mnemonicParsing="false" onAction="#onRemoveWardButton" text="Remove" />
-        <TableView fx:id="wardTable" layoutX="200.0" layoutY="24.0" prefHeight="446.0" prefWidth="487.0">
+        <Button layoutX="26.0" layoutY="173.0" mnemonicParsing="false" onAction="#onAddWardButton" prefHeight="26.0" prefWidth="60.0" text="Add" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="614.0" AnchorPane.topAnchor="180.0" />
+        <Button layoutX="26.0" layoutY="219.0" mnemonicParsing="false" onAction="#onEditWardButton" prefHeight="25.0" prefWidth="60.0" text="Edit" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="218.0" />
+        <Button layoutX="26.0" layoutY="257.0" mnemonicParsing="false" onAction="#onRemoveWardButton" prefHeight="26.0" prefWidth="60.0" text="Remove" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="614.0" AnchorPane.topAnchor="257.0" />
+        <TableView fx:id="wardTable" layoutX="200.0" prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #f8f8ff;">
             <columns>
                 <TableColumn fx:id="wardNameColumn" prefWidth="338.0" text="Ward name" />
-                <TableColumn fx:id="roomNumberColumn" prefWidth="148.0" text="Room number" />
+                <TableColumn fx:id="roomNumberColumn" prefWidth="158.40008544921875" text="Room number" />
             </columns>
+         <effect>
+            <DropShadow color="#635050" />
+         </effect>
         </TableView>
-      <Button layoutX="24.0" layoutY="445.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
+      <Button layoutX="30.0" layoutY="444.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="25.0" prefWidth="60.0" text="Back" AnchorPane.bottomAnchor="14.7" AnchorPane.leftAnchor="26.0" />
     </children>
 </AnchorPane>
