--- a/src/client/view/nurse/MakeAppointmentView.fxml
+++ b/src/client/view/nurse/MakeAppointmentView.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.MakeAppointmentViewController">
    <children>
       <AnchorPane layoutY="-4.0" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;">
          <children>
-            <TableView fx:id="patientsTableViewMakeAppointment" layoutY="30.0" prefHeight="294.0" prefWidth="322.0" style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
+            <TableView fx:id="patientsTableViewMakeAppointment" layoutX="1.0" layoutY="30.0" prefHeight="294.0" prefWidth="322.0" style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
               <columns>
                 <TableColumn fx:id="fNameColumnPatients" prefWidth="96.79998779296875" text="First Name" />
                 <TableColumn fx:id="lNameColumnPatients" prefWidth="80.79998779296875" text="Last Name" />
@@ -33,11 +38,11 @@
             </TableView>
             <Label layoutX="14.0" layoutY="6.0" text="Patients:" />
             <Label layoutX="377.0" layoutY="6.0" text="Available doctors:" textFill="#0b0a0a" />
-            <TextField fx:id="timeMakeAppointmentTxtField" layoutX="198.0" layoutY="362.0" text="hh:mm:ss" />
+            <TextField fx:id="timeMakeAppointmentTxtField" layoutX="198.0" layoutY="362.0" style="-fx-background-color: #f8f8ff;" text="hh:mm:ss" />
             <Label layoutX="22.0" layoutY="334.0" text="Date:" />
             <Label layoutX="193.0" layoutY="334.0" text="Time:" />
             <Button layoutX="75.0" layoutY="432.0" mnemonicParsing="false" onAction="#onClearMakeAppointment" text="Clear" />
-            <DatePicker fx:id="makeAppointmentDateField" layoutX="10.0" layoutY="362.0" />
+            <DatePicker fx:id="makeAppointmentDateField" layoutX="10.0" layoutY="362.0" style="-fx-background-color: #f8f8ff;" />
             <Button layoutX="541.0" layoutY="458.0" mnemonicParsing="false" onAction="#onSeeAllAppointments" text="See all appointments ➜" />
          </children>
       </AnchorPane>
