--- a/src/client/view/nurse/AllAppointmentsView.fxml
+++ b/src/client/view/nurse/AllAppointmentsView.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.AllAppointmentsViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.nurse.AllAppointmentsViewController">
    <children>
-      <TableView fx:id="appointmentsTableView" layoutY="42.0" prefHeight="328.0" prefWidth="700.0" style="-fx-background-radius: 0.5em;">
+      <TableView fx:id="appointmentsTableView" layoutY="42.0" prefHeight="328.0" prefWidth="700.0" style="-fx-background-radius: 0.5em; -fx-background-color: #f8f8ff;">
         <columns>
           <TableColumn fx:id="startDateAppColumn" prefWidth="95.99999696016312" text="Start" />
           <TableColumn fx:id="endDateAppColumn" prefWidth="96.00006103515625" text="End" />
@@ -23,12 +24,16 @@
             <DropShadow color="#413a3a" />
          </effect>
       </TableView>
-      <Button layoutX="555.0" layoutY="433.0" mnemonicParsing="false" onAction="#onRemoveButton" text="Remove appointment" />
+      <Button layoutX="396.0" layoutY="433.0" mnemonicParsing="false" onAction="#onRemoveAppointment" text="Remove appointment" />
       <Label graphicTextGap="6.0" layoutX="295.0" layoutY="8.0" text="Appointments:" wrapText="true">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Button layoutX="14.0" layoutY="432.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="26.0" prefWidth="46.0" text="Back" />
+      <Button layoutX="14.0" layoutY="432.0" mnemonicParsing="false" onAction="#onBackAppointments" prefHeight="26.0" prefWidth="46.0" text="Back" />
+      <Button layoutX="545.0" layoutY="431.0" mnemonicParsing="false" onAction="#onConfirmChangesApp" prefHeight="26.0" prefWidth="131.0" text="Confirm changes" />
    </children>
+   <effect>
+      <ColorAdjust contrast="0.09" />
+   </effect>
 </AnchorPane>
