--- a/src/client/view/nurse/MakeAppointmentView.fxml
+++ b/src/client/view/nurse/MakeAppointmentView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 
@@ -13,7 +14,7 @@
    <children>
       <AnchorPane layoutY="-4.0" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;">
          <children>
-            <TableView fx:id="patientsTableViewMakeAppointment" layoutX="1.0" layoutY="30.0" prefHeight="294.0" prefWidth="322.0" style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
+            <TableView fx:id="patientsTableViewMakeAppointment" layoutY="30.0" prefHeight="294.0" prefWidth="322.0" style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
               <columns>
                 <TableColumn fx:id="fNameColumnPatients" prefWidth="96.79998779296875" text="First Name" />
                 <TableColumn fx:id="lNameColumnPatients" prefWidth="80.79998779296875" text="Last Name" />
@@ -23,9 +24,9 @@
                   <DropShadow color="#413a3a" />
                </effect>
             </TableView>
-            <Button layoutX="543.0" layoutY="413.0" mnemonicParsing="false" onAction="#onEditPatientInfoButton" prefHeight="26.0" prefWidth="142.0" text="Edit patient info      ➜" />
-            <Button layoutX="141.0" layoutY="432.0" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
-            <Button layoutX="16.0" layoutY="432.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
+            <Button layoutX="543.0" layoutY="413.0" mnemonicParsing="false" onAction="#onEditPatientInfo" prefHeight="26.0" prefWidth="142.0" text="Edit patient info      ➜" />
+            <Button layoutX="141.0" layoutY="432.0" mnemonicParsing="false" onAction="#onConfirmMakeAppointment" text="Confirm" />
+            <Button layoutX="16.0" layoutY="432.0" mnemonicParsing="false" onAction="#onBackMakeAppointment" text="Back" />
             <TableView fx:id="doctorsTableViewMakeAppointment" layoutX="377.0" layoutY="31.0" prefHeight="294.0" prefWidth="322.0" style="-fx-background-color: #f8f8ff; -fx-background-radius: 0.5em;">
               <columns>
                 <TableColumn fx:id="firstNameColumnDoctors" prefWidth="75.0" text="First Name" />
@@ -38,13 +39,16 @@
             </TableView>
             <Label layoutX="14.0" layoutY="6.0" text="Patients:" />
             <Label layoutX="377.0" layoutY="6.0" text="Available doctors:" textFill="#0b0a0a" />
-            <TextField fx:id="timeMakeAppointmentTxtField" layoutX="198.0" layoutY="362.0" style="-fx-background-color: #f8f8ff;" text="hh:mm:ss" />
+            <TextField fx:id="timeMakeAppointmentTxtField" layoutX="198.0" layoutY="362.0" text="hh:mm:ss" />
             <Label layoutX="22.0" layoutY="334.0" text="Date:" />
             <Label layoutX="193.0" layoutY="334.0" text="Time:" />
-            <Button layoutX="75.0" layoutY="432.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
-            <DatePicker fx:id="makeAppointmentDateField" layoutX="10.0" layoutY="362.0" style="-fx-background-color: #f8f8ff;" />
-            <Button layoutX="541.0" layoutY="458.0" mnemonicParsing="false" onAction="#onSeeAllAppointmentsButton" text="See all appointments ➜" />
+            <Button layoutX="75.0" layoutY="432.0" mnemonicParsing="false" onAction="#onClearMakeAppointment" text="Clear" />
+            <DatePicker fx:id="makeAppointmentDateField" layoutX="10.0" layoutY="362.0" />
+            <Button layoutX="541.0" layoutY="458.0" mnemonicParsing="false" onAction="#onSeeAllAppointments" text="See all appointments ➜" />
          </children>
+         <effect>
+            <ColorAdjust contrast="0.07" />
+         </effect>
       </AnchorPane>
    </children>
 </AnchorPane>
