--- a/src/client/view/doctor/PatientsView.fxml
+++ b/src/client/view/doctor/PatientsView.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.PatientsViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.PatientsViewController">
    <children>
       <TableView fx:id="doctorViewPatientTable" layoutX="17.0" layoutY="42.0" prefHeight="306.0" prefWidth="544.0">
         <columns>
@@ -22,9 +19,10 @@
          </font>
       </Label>
       <Button layoutX="246.0" layoutY="361.0" mnemonicParsing="false" onAction="#onTreatButton" text="Treat" />
-      <Button layoutX="335.0" layoutY="361.0" mnemonicParsing="false" onAction="#onAddEditSample" text="Add/Edit sample" />
+      <Button layoutX="335.0" layoutY="361.0" mnemonicParsing="false" onAction="#onAddEdit" text="Patient Samples" />
       <Button layoutX="467.0" layoutY="361.0" mnemonicParsing="false" onAction="#onDiagnoseButton" text="Diagnose" />
       <Button layoutX="45.0" layoutY="361.0" mnemonicParsing="false" onAction="#onEditMedicalDescription" text="Edit medical description" />
       <Button layoutX="58.0" layoutY="409.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
+      <Button layoutX="335.0" layoutY="397.0" mnemonicParsing="false" onAction="#onSamplesToInspect" text="Samples To Inspect" />
    </children>
 </AnchorPane>
