--- a/src/client/view/doctor/AddDiagnoseView.fxml
+++ b/src/client/view/doctor/AddDiagnoseView.fxml
@@ -5,23 +5,27 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddDiagnoseViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddDiagnoseViewController">
    <children>
-      <Label layoutX="263.0" layoutY="45.0" text="New diagnose">
+      <Label layoutX="67.0" layoutY="21.0" prefHeight="30.0" prefWidth="120.0" text="New diagnose:">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="diagnoseName" layoutX="67.0" layoutY="97.0" promptText="Name" />
-      <TextField fx:id="diagnoseDescription" layoutX="67.0" layoutY="142.0" promptText="Description" />
-      <ComboBox fx:id="diagnoseSeverityLevel" layoutX="67.0" layoutY="189.0" prefWidth="150.0" promptText="Severity Level" />
-      <DatePicker fx:id="diagnoseStartDate" layoutX="67.0" layoutY="238.0" promptText="Start  Date" />
-      <Button layoutX="473.0" layoutY="326.0" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
-      <DatePicker fx:id="endDate" layoutX="67.0" layoutY="287.0" promptText="End Date" />
-      <Button layoutX="67.0" layoutY="360.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
-      <Button layoutX="128.0" layoutY="360.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
+      <TextField fx:id="diagnoseName" layoutX="67.0" layoutY="97.0" prefHeight="55.0" prefWidth="211.0" promptText="Name" />
+      <TextField fx:id="diagnoseDescription" layoutX="67.0" layoutY="169.0" prefHeight="55.0" prefWidth="211.0" promptText="Description" />
+      <ComboBox fx:id="diagnoseSeverityLevel" layoutX="67.0" layoutY="254.0" prefHeight="26.0" prefWidth="211.0" promptText="Severity Level" />
+      <DatePicker fx:id="diagnoseStartDate" layoutX="389.0" layoutY="197.0" prefHeight="26.0" prefWidth="211.0" promptText="Start  Date" />
+      <Button layoutX="564.0" layoutY="436.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="100.0" text="Save" />
+      <DatePicker fx:id="endDate" layoutX="389.0" layoutY="254.0" prefHeight="26.0" prefWidth="211.0" promptText="End Date" />
+      <Button layoutX="66.0" layoutY="436.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
+      <Button layoutX="201.0" layoutY="436.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="70.0" text="Clear" />
    </children>
+   <effect>
+      <ColorAdjust brightness="-0.06" contrast="0.08" />
+   </effect>
 </AnchorPane>
