--- a/src/client/view/doctor/AddEditSampleView.fxml
+++ b/src/client/view/doctor/AddEditSampleView.fxml
@@ -5,22 +5,26 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
+<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
    <children>
-      <TextField fx:id="result" layoutX="72.0" layoutY="261.0" promptText="Result" />
-      <Label layoutX="286.0" layoutY="24.0" text="Sample">
+      <TextField fx:id="result" layoutX="73.0" layoutY="280.0" prefHeight="49.0" prefWidth="211.0" promptText="Write result..." />
+      <Label layoutX="307.0" layoutY="24.0" text="Sample">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="462.0" layoutY="337.0" mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
-      <ComboBox fx:id="sampleType" layoutX="72.0" layoutY="74.0" prefWidth="150.0" promptText="Type" />
-      <DatePicker fx:id="deadline" layoutX="72.0" layoutY="145.0" promptText="Deadline" />
-      <ComboBox fx:id="priority" layoutX="72.0" layoutY="200.0" prefWidth="150.0" promptText="Priority" />
-      <Button layoutX="384.0" layoutY="337.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
-      <Button layoutX="300.0" layoutY="337.0" mnemonicParsing="false" onAction="#onClearButton" text="Clear" />
+      <Button layoutX="607.0" layoutY="424.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="70.0" text="Save" />
+      <ComboBox fx:id="sampleType" layoutX="72.0" layoutY="93.0" prefHeight="26.0" prefWidth="211.0" promptText="Type" />
+      <DatePicker fx:id="deadline" layoutX="72.0" layoutY="161.0" prefHeight="26.0" prefWidth="211.0" promptText="Deadline" />
+      <ComboBox fx:id="priority" layoutX="72.0" layoutY="207.0" prefHeight="26.0" prefWidth="211.0" promptText="Priority" />
+      <Button layoutX="178.0" layoutY="424.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
+      <Button layoutX="72.0" layoutY="424.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="70.0" text="Clear" />
    </children>
+   <effect>
+      <ColorAdjust brightness="-0.06" contrast="0.08" />
+   </effect>
 </AnchorPane>
