--- a/src/client/view/doctor/PatientsView.fxml
+++ b/src/client/view/doctor/PatientsView.fxml
@@ -21,8 +21,7 @@
             <DropShadow color="#33557f" />
          </effect>
       </TableView>
-      <Label layoutX="322.0" layoutY="14.0" prefHeight="27.0" prefWidth="80.0" text="Patients" AnchorPane.leftAnchor="322.0" AnchorPane.rightAnchor="298.0" AnchorPane.topAnchor="18.0">
-      <Label layoutX="17.0" layoutY="8.0" text="Patients">
+      <Label layoutX="318.0" layoutY="14.0" text="Patients" AnchorPane.leftAnchor="318.0" AnchorPane.rightAnchor="318.8" AnchorPane.topAnchor="18.0">
          <font>
             <Font size="18.0" />
          </font>
@@ -32,11 +31,6 @@
       <Button layoutX="263.0" layoutY="415.0" mnemonicParsing="false" onAction="#onDiagnoseButton" prefHeight="30.0" prefWidth="70.0" text="Diagnose" />
       <Button layoutX="533.0" layoutY="428.0" mnemonicParsing="false" onAction="#onEditMedicalDescription" prefHeight="30.0" prefWidth="130.0" text="See patient info ➜" />
       <Button layoutX="51.0" layoutY="415.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" AnchorPane.leftAnchor="65.0" />
-      <Button layoutX="246.0" layoutY="361.0" mnemonicParsing="false" onAction="#onTreatButton" text="Treat" />
-      <Button layoutX="335.0" layoutY="361.0" mnemonicParsing="false" onAction="#onAddEdit" text="Patient Samples" />
-      <Button layoutX="467.0" layoutY="361.0" mnemonicParsing="false" onAction="#onDiagnoseButton" text="Diagnose" />
-      <Button layoutX="45.0" layoutY="361.0" mnemonicParsing="false" onAction="#onEditMedicalDescription" text="Edit medical description" />
-      <Button layoutX="58.0" layoutY="409.0" mnemonicParsing="false" onAction="#onBackButton" text="Back" />
    </children>
    <effect>
       <ColorAdjust brightness="-0.06" contrast="0.08" />
