--- a/src/client/view/doctor/AddDiagnoseView.fxml
+++ b/src/client/view/doctor/AddDiagnoseView.fxml
@@ -6,24 +6,31 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddDiagnoseViewController">
    <children>
-      <Label layoutX="67.0" layoutY="21.0" prefHeight="30.0" prefWidth="120.0" text="New diagnose:">
+      <Label layoutX="14.0" layoutY="275.0" prefHeight="30.0" prefWidth="120.0" text="New diagnose:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="diagnoseName" layoutX="67.0" layoutY="97.0" prefHeight="55.0" prefWidth="211.0" promptText="Name" />
-      <TextField fx:id="diagnoseDescription" layoutX="67.0" layoutY="169.0" prefHeight="55.0" prefWidth="211.0" promptText="Description" />
-      <ComboBox fx:id="diagnoseSeverityLevel" layoutX="67.0" layoutY="254.0" prefHeight="26.0" prefWidth="211.0" promptText="Severity Level" />
-      <DatePicker fx:id="diagnoseStartDate" layoutX="388.0" layoutY="203.0" prefHeight="26.0" prefWidth="211.0" promptText="Start  Date" />
-      <Button layoutX="564.0" layoutY="436.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="100.0" text="Save" />
-      <DatePicker fx:id="endDate" layoutX="389.0" layoutY="254.0" prefHeight="26.0" prefWidth="211.0" promptText="End Date" />
-      <Button layoutX="66.0" layoutY="436.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
-      <Button layoutX="201.0" layoutY="436.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="70.0" text="Clear" />
+      <TextField fx:id="diagnoseName" alignment="TOP_LEFT" layoutX="14.0" layoutY="316.0" prefHeight="39.0" prefWidth="230.0" promptText="Name" />
+      <TextField fx:id="diagnoseDescription" alignment="TOP_LEFT" layoutX="14.0" layoutY="375.0" prefHeight="46.0" prefWidth="230.0" promptText="Description" />
+      <ComboBox fx:id="diagnoseSeverityLevel" layoutX="417.0" layoutY="319.0" prefHeight="26.0" prefWidth="211.0" promptText="Severity Level" />
+      <DatePicker fx:id="diagnoseStartDate" layoutX="417.0" layoutY="359.0" prefHeight="26.0" prefWidth="211.0" promptText="Start  Date" />
+      <Button layoutX="178.0" layoutY="440.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="65.0" text="Save" />
+      <DatePicker fx:id="endDate" layoutX="417.0" layoutY="400.0" prefHeight="26.0" prefWidth="211.0" promptText="End Date" />
+      <Button layoutX="14.0" layoutY="440.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="65.0" text="Back" />
+      <Button layoutX="94.0" layoutY="440.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="65.0" text="Clear" />
+      <ImageView fitHeight="269.0" fitWidth="700.0" layoutX="-1.0" layoutY="-3.0">
+         <image>
+            <Image url="@../../images/dagnosis_omage_1.jpg" />
+         </image>
+      </ImageView>
    </children>
    <effect>
       <ColorAdjust brightness="-0.06" contrast="0.08" />
