--- a/src/client/view/doctor/AddEditSampleView.fxml
+++ b/src/client/view/doctor/AddEditSampleView.fxml
@@ -5,26 +5,33 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
+<AnchorPane prefHeight="500.0" prefWidth="690.0" style="-fx-background-color: #90a4ae;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.doctor.AddEditSampleViewController">
    <children>
-      <TextField fx:id="result" layoutX="73.0" layoutY="280.0" prefHeight="49.0" prefWidth="211.0" promptText="Write result..." />
-      <Label layoutX="307.0" layoutY="24.0" text="Sample">
+      <TextField fx:id="result" layoutX="51.0" layoutY="280.0" prefHeight="49.0" prefWidth="211.0" promptText="Write result..." />
+      <Label layoutX="95.0" layoutY="22.0" text="Sample">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="607.0" layoutY="424.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="70.0" text="Save" />
-      <ComboBox fx:id="sampleType" layoutX="72.0" layoutY="93.0" prefHeight="26.0" prefWidth="211.0" promptText="Type" />
-      <DatePicker fx:id="deadline" layoutX="72.0" layoutY="161.0" prefHeight="26.0" prefWidth="211.0" promptText="Deadline" />
-      <ComboBox fx:id="priority" layoutX="72.0" layoutY="207.0" prefHeight="26.0" prefWidth="211.0" promptText="Priority" />
-      <Button layoutX="178.0" layoutY="424.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
-      <Button layoutX="72.0" layoutY="424.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="70.0" text="Clear" />
+      <Button layoutX="206.0" layoutY="424.0" mnemonicParsing="false" onAction="#onSaveButton" prefHeight="30.0" prefWidth="70.0" text="Save" />
+      <ComboBox fx:id="sampleType" layoutX="51.0" layoutY="92.0" prefHeight="26.0" prefWidth="211.0" promptText="Type" />
+      <DatePicker fx:id="deadline" layoutX="51.0" layoutY="163.0" prefHeight="26.0" prefWidth="211.0" promptText="Deadline" />
+      <ComboBox fx:id="priority" layoutX="51.0" layoutY="206.0" prefHeight="26.0" prefWidth="211.0" promptText="Priority" />
+      <Button layoutX="125.0" layoutY="424.0" mnemonicParsing="false" onAction="#onBackButton" prefHeight="30.0" prefWidth="70.0" text="Back" />
+      <Button layoutX="43.0" layoutY="424.0" mnemonicParsing="false" onAction="#onClearButton" prefHeight="30.0" prefWidth="70.0" text="Clear" />
+      <ImageView fitHeight="501.0" fitWidth="386.0" layoutX="304.0">
+         <image>
+            <Image url="@../../images/sample_image2.jpg" />
+         </image>
+         <effect>
+            <DropShadow color="#161616" />
+         </effect>
+      </ImageView>
    </children>
-   <effect>
-      <ColorAdjust brightness="-0.06" contrast="0.08" />
-   </effect>
 </AnchorPane>
