--- a/src/client/view/doctor/AddDiagnoseView.fxml
+++ b/src/client/view/doctor/AddDiagnoseView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -30,6 +31,9 @@
          <image>
             <Image url="@../../images/dagnosis_omage_1.jpg" />
          </image>
+         <effect>
+            <DropShadow color="#1b2767" />
+         </effect>
       </ImageView>
    </children>
    <effect>
